[package]
name = "bevy_window_as_ui_root"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = { version = "0.17.0-rc.1", default-features = false }
bevy_ecs = { version = "0.17.0-rc.1", default-features = false }
bevy_window = { version = "0.17.0-rc.1", default-features = false }
bevy_camera = { version = "0.17.0-rc.1", default-features = false }
bevy_ui = { version = "0.17.0-rc.1", default-features = false }

[dev-dependencies]
bevy = { version = "0.17.0-rc.1", features = ["experimental_bevy_feathers"] }
