[package]
name = "bevy_window_as_ui_root"
description = "Small bevy utility for spawning UI roots as independent windows."
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gingeh/bevy_window_as_ui_root/"
exclude = [
  "assets/*",
]

[dependencies]
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
bevy_window = { version = "0.17", default-features = false }
bevy_camera = { version = "0.17", default-features = false }
bevy_ui = { version = "0.17", default-features = false }

[dev-dependencies]
bevy = { version = "0.17", features = ["experimental_bevy_feathers"] }
